--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     </table>
 
     <footer>
-        <p>Contact me at: <!--email_off-->xyz@email.com<!--/email_off--></p>
-        <p>Visit the <a href="https://github.com/your-username/step-analysis" target="_blank">GitHub Repository</a>.</p>
+        <p>Contact me at: <!--email_off-->reeha.shaik@straive.com<!--/email_off--></p>
+        <p>Visit the <a href="https://github.com/Reeha-aa/step-analysis" target="_blank">GitHub Repository</a>.</p>
     </footer>
 </body>
 </html>
